--- a/index.html
+++ b/index.html
@@ -50,6 +50,49 @@ Are You Eligible?<input type="text" name="myeligibility" id="are you eligible">
     </select>
 </div>
 <br>
+<label for="pwd">Password</label>
+<div>
+  <input type="password" id="pwd" name="pwd">
+</div>
+<br>
+<label for="programmes">Programmes</label>
+<div>
+    <label for="HTML">HTML</label>
+   <input type="checkbox" id="HTML" name="HTML">
+   <label for="CSS">CSS</label>
+   <input type="checkbox" id="CSS" name="CSS">
+   <label for="JAVA">JAVA</label>
+   <input type="checkbox" id="JAVA" name="JAVA" >  
+</div>
+<br>
+<div>
+    <input type="button"onclick="alert('Hello World!')" value="Click Me!">
+</div>
+<br>
+<label for="favcolor">Select your favorite color:</label>
+<div>
+  <input type="color" id="favcolor" name="favcolor">
+</div>
+<br>
+<label for="birthdaytime">Birthday (date and time):</label>
+<div>
+  <input type="datetime-local" id="birthdaytime" name="birthdaytime">
+</div>
+<br>
+<div>
+<input type="image" src="img_submit.gif" alt="Submit" width="48" height="48">
+</div>
+<br>
+<label for="myfile">Select a file:</label>
+<div>
+<input type="file" id="myfile" name="myfile">
+</div>
+<br>
+<label for="phone">Enter your phone number:</label>
+<div>
+  <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+</div>
+<br>
 <label for="buttons"></label>
     <div>
         <input type="submit" value="Submit now">
